# include_assets

./: Cargo.toml  README.md  rustfmt.toml
examples/enums/: Cargo.toml
examples/enums/src/: main.rs
examples/named/: Cargo.toml  build.rs
examples/named/src/: main.rs
include_assets/: Cargo.toml
include_assets/other_assets/: .gitkeep
include_assets/src/: lib.rs
include_assets_decode/: Cargo.toml
include_assets_decode/src/: checksum.rs  codec.rs  common.rs  enums.rs  lib.rs  named.rs
include_assets_encode/: Cargo.toml
include_assets_encode/src/: common.rs  enums.rs  lib.rs  named.rs  parse.rs
